LPS-60571 Fixes the size of the fields on DDL Form and DDL Field Settings Modal on mobile devices.

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -70,13 +70,29 @@ $horizontal-spacing: 35px;
 		}
 	}
 
-	.icon-spinner {
-		@include animation(spin 1000ms infinite linear);
-	}
-
 	.form-builder-field-settings-save .icon-spinner {
 		display: inline-block;
 		margin: -2px 0 0 4px;
+	}
+
+	.form-control {
+		font-size: 14px;
+    	height: 40px;
+	}
+
+	@include sm {
+		.form-control {
+			font-size: 16px;
+		}
+	}
+
+	.help-block {
+		font-size: 14px;
+		position: absolute;
+	}
+
+	.icon-spinner {
+		@include animation(spin 1000ms infinite linear);
 	}
 
 	label.radio-inline {
@@ -86,11 +102,6 @@ $horizontal-spacing: 35px;
 		& + .radio-inline {
 			margin-left: 0;
 		}
-	}
-
-	.help-block {
-		font-size: 14px;
-		position: absolute;
 	}
 
 	.liferay-ddm-form-field-checkbox .toggle-switch-handle .toggle-switch-text {
